# validation

./: pyproject.toml  validation.db
configs/sub-001/: task-balance_trial-01.yaml  task-balance_trial-02.yaml  task-treadmill_trial-01.yaml  task-treadmill_trial-02.yaml
configs/sub-002/: task-balance_trial-01.yaml  task-balance_trial-02.yaml  task-treadmill_trial-01.yaml  task-treadmill_trial-02.yaml
configs/sub-003/: task-balance_trial-01.yaml  task-balance_trial-02.yaml  task-treadmill_trial-01.yaml  task-treadmill_trial-02.yaml
configs/sub-004/: task-balance_trial-01.yaml  task-balance_trial-02.yaml  task-treadmill_trial-01.yaml  task-treadmill_trial-02.yaml
configs/sub-005/: task-balance_trial-01.yaml  task-balance_trial-02.yaml  task-treadmill_trial-01.yaml  task-treadmill_trial-02.yaml
configs/sub-006/: task-balance_trial-01.yaml  task-balance_trial-02.yaml  task-treadmill_trial-01.yaml  task-treadmill_trial-02.yaml
database/: create_views.py  db.py  expected.py  index_recordings.py  scanner.py  trial_identity.py
plotting/balance/: balance_metrics_full_fig.py  balance_metrics_table.py  com_violin_plots.py  path_length_agreement_all_trackers.py  path_length_sensitivity_all_trackers.py  plot_xy_plane.py  sensitivity_and_agreement_plots.py
plotting/gait/: joint_angle_rmse.py  normalized_angles_and_spm.py
tests/: test_component_paths.py  test_output_paths.py  test_trial_identity.py
validation/: step_registry.py
validation/components/: __init__.py  freemocap.py  gait_parameters.py  metrics.py  qualisys.py  step_finder_comps.py  (+2 more)
(+91 files in other folders)
